--- a/src/DShop.Services.Discounts/appsettings.json
+++ b/src/DShop.Services.Discounts/appsettings.json
@@ -3,12 +3,12 @@
     "name": "discounts-service"
   },
   "consul": {
-    "enabled": false,
+    "enabled": true,
     "url": "http://localhost:8500",
     "service": "discounts-service",
-    "address": "docker.for.mac.localhost",
+    "address": "host.docker.internal",
     "port": "5010",
-    "pingEnabled": false,
+    "pingEnabled": true,
     "pingEndpoint": "ping",
     "pingInterval": 5,
     "removeAfterInterval": 10,
@@ -35,7 +35,7 @@
   },
   "metrics": {
     "enabled": true,
-    "influxEnabled": false,
+    "influxEnabled": true,
     "prometheusEnabled": true,
     "influxUrl": "http://localhost:8086",
     "database": "dshop",
